--- a/course/templates/course/_course_row.html
+++ b/course/templates/course/_course_row.html
@@ -1,4 +1,4 @@
-{% load txrx_tags thumbnail crop_util %}
+{% load thumbnail crop_util %}
 <div class="course new filterable well{% if course.last_date < yesterday %} past{% endif %}{% if course in user_courses %} success{% endif %}"
      id="c{{session.id}}" data-subject="{% for subject in course.subjects.all %}{{ subject }},{% endfor %}"
      data-date="{{ course.first_date|date:"Ymd" }}">
@@ -8,6 +8,11 @@
     {% endthumbnail %}
   </a>
   <div class="details">
+    <div class="subjects">
+      {% for subject in course.subjects.all %}
+      <span style="margin-right: 10px;">{{ subject.name|upper }}</span>
+      {% endfor %}
+    </div>
     <a href="{% url "course:new_detail" course.pk course.slug %}" class="title">
       {% if course.branding %} {#! todo not implimented #}
       {% thumbnail course.branding.get_small_image "150x40" crop="center" as im %}
@@ -15,37 +20,26 @@
            style="float:left;margin: 5px 10px 0 0;" />
       {% endthumbnail %}
       {% endif %}
-      {{ course }}</a>
+      {{ course }}
+      <div class="price">${{ course.user_fee }}</div>
+    </a>
+    {% if course.active_sessions|length > 1 %}
+    <b>{{ course.active_sessions|length }} classes:</b>
+    {% endif %}
     {% for session in course.active_sessions %}
     {% if forloop.counter == 4 and course.active_sessions|length > 4 %}
     <input type="checkbox" id="show_sessions_{{ course.pk }}" class="session_toggle" />
     <label for="show_sessions_{{ course.pk }}"> {{ course.active_sessions|length|add:-4 }} more sessions</label>
     {% endif %}
     <div class="session">
-      <div class="CartBox">
-        {% include "course/_new_enroll_link.html" %}
-      </div>
       <small>
+        {% if session.full or session.closed %}
+        <b style="color: red;">[{% if session.full %}FULL{% else %}{{ session.closed_string }}{% endif %}]</b>
+        {% endif %}
         {{ session.get_short_dates }}
-        with <a href="{% url "member_detail" session.user.username %}">
-          <i class="icon-user"></i>{{ session.get_instructor_name|noemail }}</a>
+        with <a href="{% url "member_detail" session.user.username %}">{{ session.get_instructor_name }}</a>
       </small>
     </div>
     {% endfor %}
-    <div class="bottom">
-      <div class="subjects">
-        {% for subject in course.subjects.all %}
-        <div>{{ subject.name|upper }}</div>
-        {% endfor %}
-      </div>
-      {#! todo not implimented #}
-      {% if course.get_notes %}
-      <div class="notes">
-        {% for note,title in course.get_notes %}
-        <small class="has_notes" data-tooltip="{{ title }}"><span>{{ note }}</span></small>
-        {% endfor %}
-      </div>
-      {% endif %}
-    </div>
   </div>
 </div>
