--- a/course/templates/course/index.html
+++ b/course/templates/course/index.html
@@ -23,9 +23,6 @@
     <div>
       <input id="show_closed" type="checkbox" onchange="$(this).closest('form').submit();" />
       <label for="show_closed">Show Past Sections</label>
-      <script type="text/javascript">
-        $(document).ready(function() { $("#show_closed").change() });
-      </script>
     </div>
     {% include "course/_filters.html" %}
   </form>
@@ -57,4 +54,7 @@
     </div>
   </div>
 </div>
+<script type="text/javascript">
+  $(document).ready(function() { $("#show_closed").change(); });
+</script>
 {% endblock %}
