--- a/txrx/templates/flatpages/about-us.html
+++ b/txrx/templates/flatpages/about-us.html
@@ -6,19 +6,9 @@
 
 {% block content %}
 <div id="flatpage">
-  <h3 class="block_title">Location 205 Roberts St. Houston, Tx 77003</h3>
+  <h3 class="block_title">Houston's Hackerspace - 205 Roberts St. Houston, TX 77003</h3>
   <div class="well">
-    <p><strong>TXRX Labs is Houston’s Hackerspace.</strong> We are a project-based team of makers with backgrounds in the creative arts: electronic circuitry, music composition, 3D printing, computer science and security, screenprinting, fashion design, and even haute cuisine.</p>
-    <p>Visit us on Open House Fridays at 7pm to:</p>
-    <ul>
-      <li>Visit with our members.</li>
-      <li>Learn about our upcoming classes and workshops.</li>
-      <li>See exciting technical demonstrations.</li>
-      <li>Share your own projects.</li>
-      <li>Enjoy some home cooking.</li>
-      <li>Discuss the latest developments in science and technology.</li>
-      <li>Hang out with a friendly crowd of technology and craft enthusiasts.</li>
-    </ul>
+    <p>TX/RX is a non-profit Hackerspace in Houston, Texas offering classes, lab space, and our collective knowledge to help you launch your ideas and projects. We are a project based group of makers, inventors, tinkerers, artists, crafters, and coders. We are housed in a 30,000 square foot facility which includes a rapid fabrication lab, electronics lab, metal fabrication shop, wood workshop, machine shop, bike maintenance and repair shop, art lab, computer lab and coworking space.</p>
   </div>
   <h3 class="block_title">Our Goals</h3>
   <div class="well">
@@ -26,18 +16,13 @@
   </div>
   <h3 class="block_title">How to Participate</h3>
   <div class="well">
-    <p>Most of our events are open and available to the general public. Access to some of our lab space and tools is limited to our members who have undergone training in the safe use of our lab tools and safety equipment. Information on our upcoming events is available on our calendar.</p>
-    <p>You can become a member by coming to one of our Open House Fridays and telling one of our officers or directors that you want to be a member.  The membership fee gets you access to tools, collective wisdom, and a racous list-serve!  We have been known to stay late and turn the volume to eleven.  We look forward to welcoming you to TXRX Labs.</p>
-  </div>
-  <h3 class="block_title">Why TXRX Labs?</h3>
-  <div class="well">
-    <p>Imagine how much innovation could occur if the creative community in Houston had access to the tools and knowledge needed to bring its ideas to fruition.  We believe that we must revive the tradition of design and manufacturing in America after decades of neglect and decline.  Many of America’s greatest industries began in inspired moments in garage workshops.  We hope to provide you with that workshop through our classes and other educational programs, collective wisdom, and lab space.</p>
-  </div>
+    <p>Classes at TX/RX and most of our meetups and events are open to general public. Visit us on Open House Fridays at 7 pm to visit with our members, take a tour of our facilities, and enjoy a home cooked dinner.</p>
+  </div> 
   <h3 class="block_title">How to Help</h3>
   <div class="well">
     <ul>
       <li>Become a member.  Our greatest resource is the diversity and creativity of our members, and we are always open to new perspectives and disciplines.</li>
-      <li><a href="https://docs.google.com/forms/d/1W-fJWBGBXe0u4unAuayEQcNG9WrwvFbjtHWoxbfwkro/viewform">Volunteer!</a>  We need people to help spread the word about what we are trying to do.  Email us at txrxlabs@googlegroups.com or visit us on Open House Fridays and we will find a way for you to help. </li>
+      <li>Volunteer!  We need people to help spread the word about what we are trying to do.  Email us at volunteer@txrxlabs.org</li>
       <li>Make a cash donation.</li>
       <li>Donate tools, computers, electronics.  Have a tool you don’t use that often?  We can use it!</li>
     </ul>
