--- a/course/templates/course/index.html
+++ b/course/templates/course/index.html
@@ -20,10 +20,7 @@
   <input type="checkbox" id="toggle_filters" />
   <label for="toggle_filters" class="btn btn-success">Filter by Subject</label>
   <form onsubmit="applyFilters(this);return false;" class="filters course_filters">
-    <div>
-      <input id="show_closed" type="checkbox" onchange="$(this).closest('form').submit();" />
-      <label for="show_closed">Show Past Sections</label>
-    </div>
+    <input name="q" class="form-control" placeholder="Search Classes">
     {% include "course/_filters.html" %}
   </form>
 </div>
@@ -76,7 +73,4 @@
     {% endif %}
   </div>
 </div>
-<script type="text/javascript">
-  $(document).ready(function() { $("#show_closed").change(); });
-</script>
 {% endblock %}
