--- a/txrx/static/less/txrx.less
+++ b/txrx/static/less/txrx.less
@@ -461,3 +461,8 @@ ul.errorlist { color: red; }
 .pagination { display: inline-block; }
 
 .nav-tabs { margin-bottom: 15px; }
+#location_form {
+  .room_form { display:none; }
+  :checked + .room_form { display: block; }
+  //[name=room_selector] { display:none; }
+}
