showing off hooks

--- a/txrx/templates/index.html
+++ b/txrx/templates/index.html
@@ -5,6 +5,7 @@
 {% block header %}{% endblock %}
 
 {% block content %}
+<!-- hello bradley -->
 {% thumbnail banner.src "700x100" upscale="false" crop="noop" as im %}
 <section class="banner row">
   {% if banner.header %}<h3 class="block_title">{{ banner.header }}</h3>{% endif %}
